# docker

./: .travis.yml  README.md  deploy.sh  docker-build.sh  m4-preprocess.sh  ticktoc.sh
centos6-lts-5.12-custom-A/: stack.yaml
centos6-lts-a/: Dockerfile  Dockerfile.m4  dummy.cabal  stack.yaml
centos6-lts-b/: Dockerfile.m4  dummy.cabal
centos6-lts-c/: Dockerfile.m4
centos6-lts-d/: Dockerfile.m4
common-stack/: stack.yaml
mk2/: Dockerfile  build.sh  buildit-cba.sh  dockerize.script
