name:                dummy
version:             0.1.0.0
synopsis:            Dummy cabal file
description:         Dummy cabal file
license:             Apache-2.0
license-file:        LICENSE
maintainer:          Jonathan Merritt <j.s.merritt@gmail.com>
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , attoparsec
                     , base16-bytestring
                     , binary
                     , blaze-html
                     , blaze-markup
                     , byteable
                     , bytestring
                     , bytestring-conversion
                     , cassava
                     , containers
                     , cryptohash
                     , data-default
                     , deepseq
                     , derive
                     , directory
                     , errors
                     , exceptions
                     , fgl
                     , free
                     , graphviz
                     , hashable
                     , http-api-data
                     , http-client
                     , http-media
                     , http-types
                     , lens
                     , monad-control
                     , mtl
                     , optparse-applicative
                     , pipes
                     , pipes-aeson
                     , pipes-attoparsec
                     , pipes-bytestring
                     , pipes-csv
                     , pipes-parse
                     , pipes-safe
                     , pipes-text
                     , process
                     , process-extras
                     , quickcheck-instances
                     , random
                     , safe
                     , servant
                     , servant-blaze
                     , servant-cassava
                     , servant-client
                     , servant-docs
                     , servant-foreign
                     , servant-server
                     , split
                     , stm
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-th
                     , template-haskell
                     , text
                     , these
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , unordered-containers
                     , utf8-string
                     , vector
                     , wai
                     , wai-extra
                     , warp
